--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: #333; */
+  overflow: hidden;
+  border-bottom: 0lh;
+  padding: 20px 36px;
+  box-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px #0000001a;
+}
+.nav-logo {
+  width: 100px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Poppins", "sans-serif";
+}
+
+/* .Main--header {
+  
+} */
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  font-family: "Poppins", "sans-serif";
+}
+
+.hero--img {
+  max-width: 400px;
+  align-self: center;
+}
+
+.Main--header {
+  margin-bottom: 16px;
+}
+
+.Main--p {
+  margin-top: 0;
+}
+
+.card {
+  width: 175px;
+}
+
+.card--image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
 }
